@startuml

interface Visitor<TP, TR>

abstract AbstractVisitor<TP, TR>
class TypeCheckingVisitor<Type, Void>
class IdentificationVisitor<Void, Void>
class OffsetVisitor<Boolean, Void>

abstract AbstractCGVisitor<TP, TR>
class ValueCGVisitor<CodeGenerator, Void> /'(expressions)'/
class AddressCGVisitor<CodeGenerator, Void> /'(variables)'/
class ExecuteCGVisitor<ExecuteCgVisitorParam, Void> /'(statements)'/

class ExecuteCgVisitorParam

interface Visitor {
    TR visit(Program program, TP param)
    TR visit(Arithmetic arith, TP param)
    {method} ...
    {abstract} (One method per concrete AST node)
}

abstract AbstractVisitor {
    {abstract} (Base parsing behaviour of each interface method)
}

class TypeCheckingVisitor {
    Void visit(Assignment assignment, Void param)
    Void visit(Read read, Void param)
    Void visit(If ifStmnt, Void param)
    Void visit(While whileStmnt, Void param)
    Void visit(FunctionDefinition fDef, Void param)
    Void visit(Return returnStmnt, Void param)
    {abstract} (+ override of each expression method)
}

class IdentificationVisitor {
    - SymbolTable symbolTable
    Void visit(VarDefinition varDef, Void param)
    Void visit(FunctionDefinition fDef, Void param)
    Void visit(Variable variable, Void param)
}

class OffsetVisitor {
    Void visit(VarDefinition varDef, Void param)
    Void visit(FunctionDefinition fDef, Void param)
    Void visit(FunctionType funcType, Void param)
    Void visit(RecordType recordType, Void param)
}

class ValueCGVisitor {
    Void visit(Arithmetic, Void)
    Void visit(Variable, Void)
    Void visit(IntLiteral, Void)
}

class ExecuteCGVisitor {
    Void visit(Program, ExecuteCgVisitorParam param)
    Void visit(FunctionDefinition fDef, ExecuteCgVisitorParam param)
    Void visit(IfStatement, ExecuteCgVisitorParam param)
}

class ExecuteCgVisitorParam {
    CodeGenerator cg
    int bytesReturn
    int bytesLocals
    int bytesParams
}

class AddressCGVisitor {
    Void visit(Variable, Void)
}

Visitor <|.. AbstractVisitor

AbstractVisitor <|-- TypeCheckingVisitor
AbstractVisitor <|-- IdentificationVisitor
AbstractVisitor <|-- OffsetVisitor

Visitor <|.. AbstractCGVisitor

AbstractCGVisitor <|-- ValueCGVisitor
AbstractCGVisitor <|-- AddressCGVisitor
AbstractCGVisitor <|-- ExecuteCGVisitor

ExecuteCgVisitorParam <-- ExecuteCGVisitor

@enduml

